# DEBIT_FREE_APP

./: # gunicorn.conf.py  # prometheus_config.py  .env.example  .gitignore  .replit  DockerFile-backend  DockerFile-blockchain  DockerFile-frontend  Due_Diligence_Template ITALIANO.txt  Due_Diligence_Template_English_Translation.docx  Due_Diligence_Template_English_Translation.txt  MASTER_PROJECT.md  Master Blueprint Notebook.txt  Master Blueprint Piattaforma di Inv.txt  OROSMART Q&A SU TERMINI E CONDIZIONI CONTRATTUALI GENERALI (Ripristinato).docx  OROSMART Q&A SU TERMINI E CONDIZIONI CONTRATTUALI GENERALI.txt  OROSMART Termini e condizioni HICASH 2023.txt  Panoramica del progetto Gold Invest.txt  Pasted--2024-12-19-16-03-29-332-ERROR-in-init-Database-initialization-error-sqlite3-OperationalErro-1734624225983.txt  Pasted--Root-directory-setup-mkdir-p-gold-investment-platform-cd-gold-investment-platform-Python-b-1734616233899.txt  Pasted--app-api-v1-init-py-from-flask-import-Blueprint-api-v1-Blueprint-api-v1-name-url--1734703438376.txt  Pasted--app-services-blockchain-service-py-from-web3-import-Web3-from-web3-middleware-import-geth-poa-mi-1734447756539.txt  Pasted--app-utils-database-connection-py-from-typing-import-Optional-from-contextlib-import-contextmanag-1734622594049.txt  Pasted--app-utils-security-config-manager-py-import-os-import-json-import-logging-from-datetime-import-1734620780635.txt  Pasted--app-utils-security-init-py-from-security-manager-import-SecurityManager-from-rate-limiter--1734621890999.txt  Pasted--app-utils-security-rate-limiter-py-import-time-from-typing-import-Dict-Tuple-from-collections--1734621245485.txt  Pasted--config-py-import-os-from-typing-import-Optional-List-from-pydantic-import-BaseSettings-valida-1734616852590.txt  Pasted--config-py-import-os-import-logging-from-logging-handlers-import-RotatingFileHandler-from-typin-1734620278767.txt  Pasted--contracts-NobleGoldSystem-sol-SPDX-License-Identifier-MIT-pragma-solidity-0-8-20-impor-1734615605440.txt  Pasted--gold-investment-backend-dir-app-blockchain-config-py-def-create-app-def-create-app-docs-1734624567411.txt  Pasted--gold-investment-backend-python-main-py-2024-12-19-15-56-06-858-ERROR-in-init-Database-ini-1734623781036.txt  Pasted--gold-investment-backend-python-main-py-2024-12-19-15-57-27-093-ERROR-in-init-Database-ini-1734623860752.txt  Pasted--test-NobleGoldSystem-test-js-const-expect-require-chai-const-ethers-require-ha-1734615698211.txt  (+35 more)
(+502 files in other folders)
