
[tool.poetry]
name = "gold-investment-backend"
version = "0.1.0"
description = "Gold Investment Platform Backend"
authors = []

[tool.poetry.dependencies]
python = "^3.11"
flask = "2.0.1"
werkzeug = "2.0.1"
flask-login = "0.5.0"
flask-sqlalchemy = "^3.1.1"
flask-migrate = "^4.0.5"
flask-cors = "^4.0.0"
web3 = "^6.9.0"
python-jose = "^3.3.0"
psycopg2-binary = "^2.9.7"
python-dotenv = "^1.0.0"
setuptools = "^75.6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pytest-asyncio = "^0.21.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "strict"
