
[tool.poetry]
name = "gold-investment-backend"
version = "0.1.0"
description = "Gold Investment Platform Backend"
authors = []

[tool.poetry.dependencies]
python = "^3.11"
flask = "2.0.1"
werkzeug = "2.0.1"
flask-login = "0.5.0"
flask-sqlalchemy = "2.5.1"
sqlalchemy = "1.4.46"
flask-migrate = "3.1.0"
flask-cors = "3.0.10"
web3 = "6.0.0"
python-jose = "3.3.0"
psycopg2-binary = "2.9.6"
python-dotenv = "1.0.0"
setuptools = "^75.6.0"

[tool.poetry.group.dev.dependencies]
pytest = "7.3.1"
pytest-asyncio = "0.21.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "strict"
