[tool.poetry]
name = "gold-investment-backend"
version = "0.1.0"
description = "Gold Investment Platform Backend"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
Flask = ">=2.0.1,<3.0.0"
Werkzeug = "==2.2.3"
Flask-SQLAlchemy = ">=2.5.1,<3.0.0"
Flask-Migrate = ">=3.1.0,<4.0.0"
web3 = "6.11.4"
pytest = ">=7.3.1,<8.0.0"
pytest-asyncio = ">=0.21.0,<1.0.0"
setuptools = "^75.6.0"
python-dotenv = "^1.0.1"
flask-admin = "^1.6.1"
pyjwt = "^2.10.1"
eth-tester = ">=0.9.1"
eth-account = ">=0.8.0"
eth-typing = "3.5.2"
flask-httpauth = "^4.8.0"
redis = {extras = ["hiredis"], version = "^5.2.1"}
py-evm = "^0.10.1b2"
pytest-mock = "^3.14.0"
flask-cors = "^5.0.0"
flask-bcrypt = "^1.0.1"
flask-limiter = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "strict"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"